--- a/normal/index.html
+++ b/normal/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="index.css" rel="stylesheet"/>
-  <link rel="icon" type="image/svg+xml" href="./public/TinkerHub.png" />
+  <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXFgk4myswk6OhVHe7g7YVUlR7RD-ERO2OHw&s" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tinker Hub</title>
 </head>
@@ -41,17 +41,7 @@
 
         <h2 class="search-title">Search People</h2>
 
-        <input type="text" id="nameInput" placeholder="Enter name" class="search-input">
-        <input type="text" id="skillInput" placeholder="Enter skill" class="skill-input" oninput="handleSkillInputChange()">
-
-        <ul id="skillDropdown" class="skill-dropdown"></ul>
-
-        <div class="selected-skills-container">
-        <h3 class="selected-skills-title">Selected Skills:</h3>
-        <div id="selectedSkills" class="selected-skills"></div>
-        </div>
-
-        <button onclick="handleSearch()" class="search-button">Search</button>
+        <input type="text" id="nameInput" placeholder="Enter name" class="search-input" onkeydown="handleKeyDown(event)">
 
         <div class="results-container">
         <h2 class="results-title">Results</h2>
@@ -60,5 +50,5 @@
     </div>
 
     <script src="index.js"></script>
-  </body>
+</body>
 </html>
