--- a/normal/Profile.html
+++ b/normal/Profile.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXFgk4myswk6OhVHe7g7YVUlR7RD-ERO2OHw&s" />
   <title>Profile</title>
   <link rel="stylesheet" href="Profile.css">
 </head>
 <body>
+  <!-- Back Button -->
+  <a href="index.html">
+    <button class="back-button">Home</button>
+  </a>
+
   <div id="profile-container">
     <!-- Color block as background effect -->
     <div class="color-block" id="colorBlock"></div>
