--- a/normal/Profile.html
+++ b/normal/Profile.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <!-- Back Button -->
-  <a href="index.html">
+  <a href="./index.html">
     <button class="back-button">Home</button>
   </a>
 
