--- a/normal/index.html
+++ b/normal/index.html
@@ -42,13 +42,13 @@
         <h2 class="search-title">Search People</h2>
 
         <input type="text" id="nameInput" placeholder="Enter name" class="search-input" onkeydown="handleKeyDown(event)">
-
+        <button id="searchButton" onclick="handleSearch()">Search</button>
         <div class="results-container">
-        <h2 class="results-title">Results</h2>
-        <ul id="resultsList" class="results-list"></ul>
+            <h2 class="results-title">Results</h2>
+            <ul id="resultsList" class="results-list"></ul>
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
