--- a/normal/index.html
+++ b/normal/index.html
@@ -15,13 +15,13 @@
         </div>
 
         <div class="color-block" id="colorBlock"></div>
-
+        <!--
         <button class="menu-toggle-button" onclick="toggleMenu()">
-        <div class="menu-line"></div>
-        <div class="menu-line"></div>
-        <div class="menu-line"></div>
+            <div class="menu-line"></div>
+            <div class="menu-line"></div>
+            <div class="menu-line"></div>
         </button>
-
+        -->
         <div id="menu" class="sliding-menu menu-closed">
         <div class="menu-content">
             <h2 class="menu-title">
@@ -48,7 +48,7 @@
             <ul id="resultsList" class="results-list"></ul>
         </div>
     </div>
-
+    <script src="List.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
