--- a/normal/index.html
+++ b/normal/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="app-container">
         <div class="logo">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXFgk4myswk6OhVHe7g7YVUlR7RD-ERO2OHw&s" alt="Tinker Hub Logo">
+            <a href="https://tinkerhub.org/" target="_blank">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXFgk4myswk6OhVHe7g7YVUlR7RD-ERO2OHw&s" alt="Tinker Hub Logo">
+            </a>
             <h3>Tinker Hub</h3>
         </div>
 
@@ -22,22 +24,24 @@
             <div class="menu-line"></div>
         </button>
         -->
+        <!--
         <div id="menu" class="sliding-menu menu-closed">
-        <div class="menu-content">
-            <h2 class="menu-title">
-            Menu
-            <button onclick="toggleMenu()" class="menu-toggle-button-close">
-                <div class="close-icon">&times;</div>
-            </button>
-            </h2>
-            <ul class="menu-list">
-            <li><button class="menu-item">Profile</button></li>
-            <li><button class="menu-item">Settings</button></li>
-            <li><button class="menu-item login">Login</button></li>
-            </ul>
-            <hr class="menu-divider">
+            <div class="menu-content">
+                <h2 class="menu-title">
+                Menu
+                <button onclick="toggleMenu()" class="menu-toggle-button-close">
+                    <div class="close-icon">&times;</div>
+                </button>
+                </h2>
+                <ul class="menu-list">
+                <li><button class="menu-item">Profile</button></li>
+                <li><button class="menu-item">Settings</button></li>
+                <li><button class="menu-item login">Login</button></li>
+                </ul>
+                <hr class="menu-divider">
+            </div>
         </div>
-        </div>
+         -->
 
         <h2 class="search-title">Search People</h2>
 
